--- a/.jshintrc
+++ b/.jshintrc
@@ -1,18 +1,10 @@
 {
-    "trailing"  : false,
-    "sub"       : true,
-    "laxcomma"  : true,
-    "bitwise"   : true,
-    "nonew"     : false,
-    "undef"     : true,
-    "node"      : true,
-    "eqnull"    : true,
-    "strict"    : true,
-    "quotmark"  : false,
-    "unused"    : false,
-    "newcap"    : false,
-    "esnext"    : true,
-    "browser"   : true,
-    "devel"     : true,
-    "expr"      : true
+  "node": true,
+
+  "curly": true,
+  "latedef": true,
+  "quotmark": true,
+  "undef": true,
+  "unused": true,
+  "trailing": true
 }
