--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A component that is resizable with handles.",
   "main": "index.js",
   "scripts": {
-    "lint": "jsxhint lib/ test/",
+    "lint": "./node_modules/.bin/eslint lib/ test/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bash build.sh",
+    "git-add-build": "git add build/",
     "build-example": "webpack",
     "dev": "echo 'Open http://localhost:4002/examples/1.html'; webpack-dev-server --config webpack-dev-server.config.js --hot --progress --colors --port 4002 --content-base .",
     "prepublish": "npm run build"
@@ -27,28 +28,39 @@
   },
   "homepage": "https://github.com/STRML/react-resizable",
   "devDependencies": {
-    "babel": "^5.0.1",
-    "babel-core": "^5.0.1",
-    "babel-loader": "^5.0.0",
-    "css-loader": "^0.9.1",
-    "jshint": "^2.6.3",
-    "lodash": "^3.6.0",
+    "babel": "^5.8.29",
+    "babel-core": "^5.8.29",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.8.29",
+    "css-loader": "^0.21.0",
+    "eslint": "^1.7.3",
+    "eslint-plugin-react": "^3.6.3",
+    "lodash": "^3.10.1",
     "pre-commit": "^1.0.6",
     "precommit-hook": "^2.0.1",
-    "react": "^0.13.1",
-    "react-hot-loader": "^1.2.4",
-    "style-loader": "^0.9.0",
-    "webpack": "^1.7.3",
-    "webpack-dev-server": "^1.8.0"
+    "react": "^0.14.0",
+    "react-addons-perf": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "object-assign": "^2.0.0",
-    "react-draggable": "^0.8.1"
+    "react-draggable": "git://github.com/emosbaugh/react-draggable.git#master"
+  },
+  "peerDependencies": {
+    "react": ">=0.14.0-rc1",
+    "react-dom": ">=0.14.0-rc1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
-  "precommit": [
-    "lint"
+  "pre-commit": [
+    "lint",
+    "build",
+    "git-add-build"
   ]
 }
